--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "private": true,
   "homepage": "https://YevheniiZinych/shopping-cart/",
   "dependencies": {
+    "@emotion/react": "^11.11.0",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.13.2",
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
@@ -13,6 +16,7 @@
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.3",
     "styled-components": "^5.3.10",
+    "use-places-autocomplete": "^4.0.0",
     "web-vitals": "^2.1.3"
   },
   "scripts": {
