--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
     "react": "^18.1.0",
+    "react-cool-onclickoutside": "^1.7.0",
     "react-dom": "^18.1.0",
+    "react-geocode": "^0.2.3",
+    "react-hot-toast": "^2.4.1",
     "react-router-dom": "^6.11.2",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.3",
