--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,6 +16,9 @@ jobs:
           npm install
           npm run lint:js
           npm run build
+        env:
+        REACT_APP_GOOGLE_MAP_API_KEY:
+          ${{ secrets.REACT_APP_GOOGLE_MAP_API_KEY }}
 
       - name: Deploy 🚀
         uses: JamesIves/github-pages-deploy-action@4.1.0
