--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,10 +4,6 @@ on:
   push:
     branches: [main]
 
-            env:
-        REACT_APP_GOOGLE_MAP_API_KEY:
-          ${{ secrets.REACT_APP_GOOGLE_MAP_API_KEY }}
-
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
@@ -21,9 +17,13 @@ jobs:
           npm run lint:js
           npm run build
 
+        env:
+        REACT_APP_GOOGLE_MAP_API_KEY:
+          ${{ secrets.REACT_APP_GOOGLE_MAP_API_KEY }}
 
       - name: Deploy 🚀
         uses: JamesIves/github-pages-deploy-action@4.1.0
         with:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN_KEY }}
           branch: gh-pages
           folder: build
