--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,23 +7,21 @@ on:
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
+    environment: .env
     steps:
       - name: Checkout 🛎️
         uses: actions/checkout@v2.3.1
 
       - name: Install, lint, build 🔧
         run: |
+          echo ${{ secrets.REACT_APP_GOOGLE_MAP_API_KEY }}
+          echo "REACT_APP_GOOGLE_MAP_API_KEY=${{ secrets.REACT_APP_GOOGLE_MAP_API_KEY }}"
           npm install
           npm run lint:js
           npm run build
 
-        env:
-        REACT_APP_GOOGLE_MAP_API_KEY:
-          ${{ secrets.REACT_APP_GOOGLE_MAP_API_KEY }}
-
       - name: Deploy 🚀
         uses: JamesIves/github-pages-deploy-action@4.1.0
         with:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN_KEY }}
           branch: gh-pages
           folder: build
