--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,31 +1,24 @@
 name: Build and deploy to GitHub Pages
-env:
-        REACT_APP_GOOGLE_MAP_API_KEY:
-          ${{ secrets.REACT_APP_GOOGLE_MAP_API_KEY }}
+
 on:
   push:
     branches: [main]
 
-<<<<<<< HEAD
-=======
-
-
->>>>>>> f40ce9b28a34798bd373394a050a9f82e99a34fd
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
-    environment: .env
+    environment: REACT_APP_GOOGLE_MAP_API_KEY
     steps:
       - name: Checkout 🛎️
         uses: actions/checkout@v2.3.1
 
       - name: Install, lint, build 🔧
         run: |
-          echo ${{ secrets.REACT_APP_GOOGLE_MAP_API_KEY }}
-          echo "REACT_APP_GOOGLE_MAP_API_KEY=${{ secrets.REACT_APP_GOOGLE_MAP_API_KEY }}"
           npm install
           npm run lint:js
           npm run build
+          echo ${{ secrets.REACT_APP_GOOGLE_MAP_API_KEY }}
+          echo "REACT_APP_GOOGLE_MAP_API_KEY=${{ secrets.REACT_APP_GOOGLE_MAP_API_KEY }}"
 
       - name: Deploy 🚀
         uses: JamesIves/github-pages-deploy-action@4.1.0
