--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,6 +19,9 @@ jobs:
 
       - name: Deploy 🚀
         uses: JamesIves/github-pages-deploy-action@4.1.0
+        env:
+          REACT_APP_GOOGLE_MAP_API_KEY:
+            ${{ secrets.REACT_APP_GOOGLE_MAP_API_KEY }}
         with:
           branch: gh-pages
           folder: build
