--- a/render.yaml
+++ b/render.yaml
@@ -1,2 +1,7 @@
+static_headers:
+  - path: 'shopping-cart/static/css/*.css'
+    headers:
+      - key: 'Content-Type'
+        value: 'text/css'
 static_build_command: 'npm run build'
 static_publish_path: 'build'
